--- a/frontend/src/data/reasons.json
+++ b/frontend/src/data/reasons.json
@@ -5,11 +5,11 @@
     },
     {
         "title": "Proven Track Record of Success",
-        "description": "NexGen demonstrates a consistent ability to meet and exceed client expectations, providing reliable and effective web solutions tailored to diverse needs."
+        "description": "DigiCore demonstrates a consistent ability to meet and exceed client expectations, providing reliable and effective web solutions tailored to diverse needs."
     },
     {
         "title": "Client-Centric Approach",
-        "description": "At NexGen, we prioritize understanding our clients' unique requirements, fostering transparent communication throughout the development process."
+        "description": "At DigiCore, we prioritize understanding our clients' unique requirements, fostering transparent communication throughout the development process."
     },
     {
         "title": "Dedicated Team of Professionals",
