--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.0",
     "@types/lodash": "^4.17.15",
     "antd": "^5.23.3",
+    "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
     "next": "15.1.6",
     "next-svgr": "^0.0.2",
