--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
+    "react-markdown": "^10.1.0",
     "react-responsive": "^10.0.1"
   },
   "devDependencies": {
