--- a/frontend/src/data/reasons.json
+++ b/frontend/src/data/reasons.json
@@ -1,18 +1,18 @@
 [
     {
-        "title": "Expertise in Cutting-Edge Technologies",
-        "description": "DigiCore ensures your projects are powered by state-of-the-art technologies, guaranteeing innovation and future-proof solutions."
+        "title": "Leveraging Cutting-Edge Technologies",
+        "description": "DigiCore integrates the latest technologies to deliver innovative and future-ready solutions for your business."
     },
     {
-        "title": "Proven Track Record of Success",
-        "description": "DigiCore demonstrates a consistent ability to meet and exceed client expectations, providing reliable and effective web solutions tailored to diverse needs."
+        "title": "Proven Reliability and Success",
+        "description": "DigiCore consistently surpasses client expectations, providing dependable and effective web solutions tailored to diverse needs."
     },
     {
-        "title": "Client-Centric Approach",
-        "description": "At DigiCore, we prioritize understanding our clients' unique requirements, fostering transparent communication throughout the development process."
+        "title": "Customer-Focused Collaboration",
+        "description": "We take the time to understand each client’s unique requirements, ensuring transparency and open communication throughout the development process."
     },
     {
-        "title": "Dedicated Team of Professionals",
-        "description": "Our professionals bring a wealth of expertise to the table, ensuring the delivery of top-notch, scalable, and secure web solutions for your business."
+        "title": "A Team of Skilled Professionals",
+        "description": "Our experts deliver high-quality, scalable, and secure web solutions to support your business growth."
     }
 ]
