--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "svg-gen": "yarn svgr --out-dir src/components/Icons src/sources/icons"
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.0",
@@ -19,7 +20,6 @@
     "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
     "next": "15.1.6",
-    "next-svgr": "^0.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@svgr/cli": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
